Actualizacion ejercicio extra

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <h2>Resultado:</h2>
   <p id="resultado"></p>
 
+  <p id="pregunta"></p>
+<button id="Si" style="display:none">Si</button>
+<button id="no" style="display:none">No</button>
+<p id="Respuesta" style="display:none"></p>
+
   <script src="app.js"></script>
 </body>
 </html>
